safari overflow bug fixing attempt3

--- a/client/src/pages/HomePage/style.css
+++ b/client/src/pages/HomePage/style.css
@@ -1,4 +1,5 @@
 .homecard {
+  -webkit-text-size-adjust: none;
   border-radius: 50%;
   box-shadow: 1px 5px 5px black;
   margin: auto;
